injectable/tests/ui/unknown_impl_attribute.stderr
error: unknown injectable_impl attribute: `bad`
  --> tests/ui/unknown_impl_attribute.rs:13:14
   |
13 | #[injectable(bad = "value")]
   |              ^^^
